# Programming-II-Project

./: BaseDeDatos.cpp  BaseDeDatos.h  CMakeLists.txt  Cardio.cpp  Cardio.h  Ejercicio.h  Flexibilidad.cpp  Flexibilidad.h  Fuerza.cpp  Fuerza.h  Grafica.py  Graficas.h  Graficas.py  Librerias.h  Menus.h  README.md  ReporteGeneral.txt  Usuario.cpp  Usuario.h  main.cpp
Borrador/: CMET.cpp  CMET.h  main.cpp
docs/: ReporteGeneral.txt
include/exercise/: Cardio.h  Ejercicio.h  Flexibilidad.h  Fuerza.h
include/user/: BaseDeDatos.h  Usuario.h
include/utils/: Librerias.h  Menus.h
scripts/: Grafica.py
src/: main.cpp
src/exercise/: Cardio.cpp  Flexibilidad.cpp  Fuerza.cpp
src/user/: BaseDeDatos.cpp  Usuario.cpp
